# snakegram

./: README.md  backend.py  pyproject.toml
builder/: __init__.py  type_language_converter.py  utils.py
resource/: mtproto.tl  schema.tl
snakegram/: __init__.py  about.py  alias.py  enums.py  helpers.py  models.py
snakegram/core/: handlers.py  telegram.py
snakegram/core/internal/: __init__.py  cache_entities.py  event_handler.py  update_state.py
snakegram/core/methods/: __init__.py  auth.py  common.py  updates.py
snakegram/crypto/: __init__.py  aes.py  auth_key.py  password.py  public_key.py  utils.py
snakegram/errors/: __init__.py  base_rpc_errors.py  common.py
snakegram/filters/: __init__.py  filter.py  proxy_filter.py
snakegram/gadgets/: byteutils.py  tlobject.py  utils.py
snakegram/network/: connection.py  handshake.py  utils.py
snakegram/session/: __init__.py  abstract.py  sqlite_session.py
tests/filters/: test_filter.py  test_proxy_filter.py
